# inkflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_GUIDE.md  Dockerfile  NETWORK_SETUP.md  README.md  alembic.ini  build.sh  check_redis_content.py  claude-dev-token.txt  docker-compose.dev.yml  docker-compose.yml  nginx-proxy.conf  pyproject.toml  test_stream.html  test_stream_console.js
.claude/: settings.local.json
.github/workflows/: docker-build.yml
.iteration/: 01-token-refresh-solution.md  02-stream-reconnect-solution.md  03-novel-completion-solution.md  phase1-remove-duplicate-title-generation.md  phase2-redis-storage-structure.md  phase3-stream-decoupling-and-reconnection.md  phase4-chapter-generation-retry-mechanism.md
alembic/: env.py
alembic/versions/: 013fbe23817b_create_initial_tables.py  07f492baa56a_fix_chapter_status_enum_type.py  316cc97feb71_fix_novels_table_schema_mismatch.py  6e4bc2f8d7b5_添加任务管理系统_task_id机制支持.py  add_option_tags_system.py  bc66b51d9f4f_add_stream_generation_fields_to_chapters.py  ce0b5e4d2b89_add_content_length_to_chapters_for_.py  e23315eafbc7_add_chapters_options_and_user_choices_.py  e4487f02eef6_优化任务表_移除实时更新字段_简化为核心业务字段.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  (+7 more)
app/core/: config.py  security.py
app/db/: base.py  database.py  init_db.py  migration.py  redis.py
app/models/: __init__.py  chapter.py  novel.py  option.py  task.py  user.py  user_preference.py.bak
app/schemas/: __init__.py  auth.py  chapter.py  kimi.py  novel.py  option_tags.py  task.py  user.py
app/services/: __init__.py  auth.py  chapter.py  chapter_cache.py  chapter_generator.py  kimi.py  novel.py  novel_generator.py  redis_queue.py  stream_manager.py  task.py  user.py
app/utils/: json_extractor.py  kimi_schema.py
code-review/: review-2025-09-20-1208.md
data_backups/checkpoint_20250923_143051/: chapters_backup_20250923_143051.json  checkpoint_info.json  generation_tasks_backup_20250923_143051.json  novels_backup_20250923_143051.json  user_choices_backup_20250923_143051.json  users_backup_20250923_143051.json
docs/: chapter_generation_design.md  chapter_generation_technical_solution.md  development_progress.md  frontend-pages-design.md  frontend-tech-stack.md
frontend/: .env.example  Dockerfile  Dockerfile.old  entrypoint.sh  env-replace.sh  index.html  nginx.conf  package-lock.json  package.json  serve.json  tailwind.config.js  test-fixed.html  test-index.html
frontend/src/: App.css  router.jsx
prompts/: README.md  chapter_generation.md  scifi.md  wuxia.md
scripts/: README.md  data_migration_safety.py  data_recovery.py  direct_test_fix.py  init.sql  reset_chapter_sequence.py  start-db.bat  stop-db.bat
(+18 files in other folders)
